<resources>
    <string name="app_name">Our Potatoes</string>
    <string name="recipeName">Potato Recipe name</string>
    <string name="hint_recipeName">Enter recipe name here</string>
    <string name="recipe">Recipe</string>
    <string name="hint_recipe">Enter recipe here</string>
    <string name="minutes">Cooking time (minutes)</string>
    <string name="hint_minutes">Enter cooking time (minutes) here</string>
    <string name="stars">Stars</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>

    <string name="title_activity_main">Insert recipes</string>
    <string name="title_activity_second">Show recipes</string>
    <string name="title_activity_third">Modify recipes</string>

    <string name="id">Recipe ID</string>
    <string name="btnShowList">Show List</string>
    <string name="btnInsert">Insert</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="btn5Stars">Show all recipes with 5 stars</string>
</resources>
